Ui done, 1 page, everything working
To Do: burger menu, separate pages